--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.5.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.6",
