--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@slack/web-api": "^5.7.0",
+    "axios": "^0.19.1",
+    "dotenv": "^8.2.0",
     "framer-motion": "^1.7.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^7.1.0",
