--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
+    "react-player": "^1.14.2",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.3",
     "react-visibility-sensor": "^5.1.1",
