--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^9.1.7",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.5.4",
+    "next-videos": "^1.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
