--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-player": "^1.14.2",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "responsive-loader": "^1.2.0",
+    "sharp": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.6",
